--- a/revision.html
+++ b/revision.html
@@ -58,49 +58,33 @@
             text-align: center;
         }
     </style>
-
-
-
 </head>
 <body>
-    <h2>Placez les éléments dans les bonnes catégories</h2>
+    <h2>Glissez les éléments vers les catégories correspondantes</h2>
 
-    <div id="elements">
-        <!-- Les éléments à déplacer -->
-        <div draggable="true" id="DNS-NS">DNS-NS</div>
-        <div draggable="true" id="WAF">WAF</div>
-        <div draggable="true" id="AV-EDR">AV/EDR</div>
-        <div draggable="true" id="SMTP">SMTP</div>
-        <div draggable="true" id="Apache2">Apache2</div>
-        <div draggable="true" id="LB">LB</div>
-        <div draggable="true" id="MFA">MFA</div>
-        <div draggable="true" id="Radius">Radius</div>
-        <div draggable="true" id="DLP">DLP</div>
-        <div draggable="true" id="XDR">XDR</div>
-        <div draggable="true" id="RP">RP</div>
-        <div draggable="true" id="Web-Proxy">Web Proxy</div>
-        <div draggable="true" id="Sandbox">Sandbox</div>
-        <div draggable="true" id="Mail-Proxy">Mail Proxy</div>
-        <div draggable="true" id="VPN">VPN</div>
-        <div draggable="true" id="DNS-Forwarder">DNS Forwarder</div>
-        <div draggable="true" id="DHCP">DHCP</div>
-    </div>
+    <div class="container">
+        <div id="elements">
+            <!-- Les éléments à déplacer seront ici -->
+            <div draggable="true" id="DNS-NS" class="element" ondragstart="drag(event)">DNS-NS</div>
+            <div draggable="true" id="WAF" class="element" ondragstart="drag(event)">WAF</div>
+            <!-- Ajoutez d'autres éléments ici -->
+        </div>
 
-    <div class="categories">
-        <div id="DMZ-in" ondrop="drop(event)" ondragover="allowDrop(event)">DMZ in:</div>
-        <div id="DMZ-out" ondrop="drop(event)" ondragover="allowDrop(event)">DMZ out:</div>
-        <div id="DMZ-in-out" ondrop="drop(event)" ondragover="allowDrop(event)">DMZ in/out:</div>
-        <div id="LAN" ondrop="drop(event)" ondragover="allowDrop(event)">LAN:</div>
+        <div class="categories">
+            <!-- Les catégories où déposer les éléments -->
+            <div id="DMZ-in" class="category" ondrop="drop(event)" ondragover="allowDrop(event)">DMZ in</div>
+            <div id="DMZ-out" class="category" ondrop="drop(event)" ondragover="allowDrop(event)">DMZ out</div>
+            <!-- Ajoutez d'autres catégories si nécessaire -->
+        </div>
     </div>
 
     <p id="message" class="error"></p>
 
     <script>
         const correctMappings = {
-            "DMZ-in": ["DNS-NS", "WAF", "RP", "VPN"],
-            "DMZ-out": ["Web-Proxy", "DNS-Forwarder"],
-            "DMZ-in-out": ["SMTP", "Mail-Proxy"],
-            "LAN": ["AV-EDR", "Apache2", "LB", "MFA", "Radius", "DLP", "XDR", "Sandbox", "DHCP"]
+            "DMZ-in": ["DNS-NS", "WAF"],
+            "DMZ-out": ["SMTP", "Mail-Proxy"],
+            // Ajoutez d'autres mappings corrects ici
         };
 
         function allowDrop(ev) {
@@ -115,22 +99,20 @@
         function drop(ev) {
             ev.preventDefault();
             var data = ev.dataTransfer.getData("text");
-            var target = ev.target;
+            var target = ev.target.closest('.category'); // Assurez-vous de cibler la catégorie, pas un enfant
 
-            if (target.className.includes('category')) {
-                if (correctMappings[target.id] && correctMappings[target.id].includes(data)) {
-                    target.appendChild(document.getElementById(data));
-                    document.getElementById("message").textContent = "";
-                } else {
-                    document.getElementById("message").textContent = "Placement incorrect !";
-                }
+            if (target && correctMappings[target.id].includes(data)) {
+                target.appendChild(document.getElementById(data));
+                document.getElementById("message").textContent = "";
+            } else {
+                document.getElementById("message").textContent = "Placement incorrect !";
             }
             removeHighlight();
         }
 
         function highlightDroppableAreas(elementId) {
             document.querySelectorAll('.category').forEach(category => {
-                if (correctMappings[category.id].includes(elementId)) {
+                if (correctMappings[category.id] && correctMappings[category.id].includes(elementId)) {
                     category.classList.add('highlight');
                 }
             });
@@ -143,8 +125,8 @@
         }
 
         document.querySelectorAll('#elements .element').forEach(item => {
-            item.setAttribute('draggable', true);
             item.addEventListener('dragstart', drag);
+            item.addEventListener('dragend', removeHighlight);
         });
     </script>
 </body>
