--- a/revision.html
+++ b/revision.html
@@ -48,8 +48,10 @@
             overflow: hidden;
         }
 
-        .highlight {
-            background-color: #bdecb6; /* Couleur de mise en évidence pour les zones de dépôt */
+        .message {
+            color: green;
+            font-weight: bold;
+            text-align: center;
         }
 
         .error {
@@ -58,6 +60,7 @@
             text-align: center;
         }
     </style>
+
 </head>
 <body>
     <h2>Glissez les éléments vers les catégories correspondantes</h2>
